test/data/semantic-errors/return-missing-value.ava
var thisFunction = function (x:int) -> return; end;